# TrajAI

./: .cursorignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  demo.py  pyproject.toml  trajai-spec.md  unitai-spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ci/github_action/: action.yml  entrypoint.sh
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/assertion_library_20260213/: index.md  metadata.json  plan.md  spec.md
conductor/archive/core_mock_20260213/: metadata.json  plan.md  spec.md
conductor/archive/generic_adapter_20260213/: index.md  plan.md  spec.md
conductor/archive/statistical_runner_20260217/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/assertion_library_20260213/: plan.md
conductor/tracks/core_mock_20260213/: index.md  plan.md  spec.md
conductor/tracks/generic_adapter_20260213/: metadata.json  plan.md
conductor/tracks/statistical_runner_20260217/: spec.md
docs/: adapters.md  assertions.md  ci.md  configuration.md  quickstart.md  statistical-testing.md
examples/generic_chatbot/: README.md  agent.py  test_chatbot.py
examples/refund_agent/: README.md  agent.py  test_refund.py
examples/research_agent/: README.md  agent.py  test_research.py
launch/: blog.md  hackernews.md  reddit.md  twitter.md
tests/: test_adapters_base.py  test_assertions_output_metadata.py  test_assertions_tool_calls.py  test_cache.py  test_ci.py  test_cli.py  test_config.py  test_crewai_adapter.py  test_execution.py  test_formatter.py  test_generic_adapter.py  test_generic_e2e.py  test_langgraph_adapter.py  test_mock_tool_dict.py  test_openai_agents_adapter.py  test_pytest_plugin.py  test_result.py  test_result_assertions.py  test_scaffolding.py  test_statistical_decorator.py  test_statistical_result.py  test_statistical_runner_cost.py  test_statistical_runner_parallel.py  test_statistical_runner_serial.py  test_strategies.py  test_toolkit.py  test_trajectory.py
tests/examples/: DEMO_REFERENCE.md  QUICK_START.md  README.md  __init__.py  scenario_1_single_tool_call.py  scenario_2_two_tool_calls_sequence.py  scenario_3_no_tool_call.py  scenario_4_sequence_mock.py  scenario_5_error_handling.py  scenario_6_openai_agents.py  scenario_7_crewai.py  scenario_8_statistical_testing.py
tests/fixtures/: crewai_agent.py  langgraph_agent.py  openai_agents_agent.py  simple_agent.py
trajai/: config.py
trajai/adapters/: __init__.py  base.py  crewai.py  generic.py  langgraph.py  openai_agents.py
trajai/cli/: main.py  results.py  templates.py
trajai/core/: assertions.py  formatter.py  result.py
trajai/mock/: __init__.py  strategies.py  toolkit.py
trajai/pytest_plugin/: __init__.py  config.py  fixtures.py  plugin.py
trajai/runner/: __init__.py  replay.py  statistical.py
unitai/: config.py
unitai/adapters/: __init__.py  base.py  crewai.py  generic.py  langgraph.py  openai_agents.py
unitai/cli/: main.py  results.py  templates.py
unitai/core/: assertions.py  formatter.py  result.py  trajectory.py
unitai/mock/: __init__.py  strategies.py  toolkit.py
unitai/pytest_plugin/: config.py  fixtures.py  plugin.py
unitai/runner/: __init__.py  replay.py  statistical.py
