[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unitai"
dynamic = ["version"]
description = "The open-source testing framework for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ai", "agents", "testing", "pytest"]
authors = [
  { name = "Saalik", email = "saalik@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph"]
crewai = ["crewai"]
openai = ["openai"]
semantic-kernel = ["semantic-kernel"]
all = [
  "unitai[langgraph,crewai,openai,semantic-kernel]",
]

[project.urls]
Homepage = "https://github.com/saalik/unitai"

[tool.hatch.version]
path = "unitai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["unitai"]

[project.scripts]
unitai = "unitai.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
