[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trajai"
dynamic = ["version"]
description = "The open-source testing framework for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "agents", "testing", "pytest", "llm", "langchain", "crewai", "openai"]
authors = [
  { name = "Saalik", email = "saalik@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Pytest",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph"]
crewai = ["crewai"]
openai-agents = ["openai-agents"]
semantic-kernel = ["semantic-kernel"]
all = [
  "trajai[langgraph,crewai,openai-agents,semantic-kernel]",
]

[project.urls]
Homepage = "https://github.com/saalik/trajai"
Documentation = "https://github.com/saalik/trajai/tree/main/docs"
Repository = "https://github.com/saalik/trajai"
Issues = "https://github.com/saalik/trajai/issues"
Changelog = "https://github.com/saalik/trajai/releases"

[tool.hatch.version]
path = "trajai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["trajai"]

[project.scripts]
trajai = "trajai.cli.main:main"

[project.entry-points.pytest11]
trajai = "trajai.pytest_plugin.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Enable pytester fixture for plugin tests
addopts = "-p pytester"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
exclude = [
    "tests/",
    "examples/",
    "demo\\.py",
]

[[tool.mypy.overrides]]
module = [
    "crewai",
    "crewai.tools",
    "agents",
    "agents.tool",
    "langgraph.*",
    "langchain_core.*",
    "tomli",
]
ignore_missing_imports = true
